# AugMed

./: .gitignore  README.md  pyproject.toml
augmed/: typing.py
augmed/data/: example_labels.npz  example_points.npz  examples.py
augmed/transforms/: __init__.py  identity.py  pipeline.py  transform.py
augmed/transforms/grid/: __init__.py  crop.py  grid.py  pad.py  patch.py  resize.py
augmed/transforms/intensity/: __init__.py  force_resample.py  intensity.py  min_max.py  norm.py  normalise.py  rescale.py  threshold.py
augmed/transforms/spatial/: __init__.py  break_affine_chain.py  elastic.py  spatial.py
augmed/transforms/spatial/affine/: __init__.py  affine.py  flip.py  rotate.py  scale.py  shear.py  translate.py
augmed/utils/: __init__.py  args.py  assertions.py  conversion.py  geometry.py  grid.py  io.py  logging.py  matrix.py  misc.py  plotting.py  python.py
docs/: design.md
scripts/: publish.ps1
scripts/benchmark/: benchmark_transforms.py  results_20260323_175022.csv  results_20260323_175613.csv  results_20260323_180035.csv  results_20260323_180627.csv  results_20260323_184751.csv  results_20260323_185630.csv  results_20260323_190653.csv
scripts/lint/: fix_imports.py  sort_imports.py  sort_kwargs.py  sort_methods.py
scripts/linting/: fix_imports.py  sort_kwargs.py  sort_methods.py
scripts/performance/: benchmark.py  benchmark_20260324_155744.csv  benchmark_20260325_121404.csv  profile.py  profile_20260324_130216.csv  profile_20260325_120459.csv  profile_20260325_121112.csv  profile_20260325_121658.csv  profile_20260325_121658.txt  profile_output.txt
