[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augmed"
version = "0.1.0"
description = "GPU-accelerated medical image augmentation with point cloud transforms and single-resample pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["medical-imaging", "augmentation", "pytorch", "transforms", "data-augmentation"]
classifiers = []
dependencies = [
    "jaxtyping",
    "numpy",
    "pyyaml",
    "torch",
]

[project.urls]
Homepage = "https://github.com/clarkbab/augmed"
Repository = "https://github.com/clarkbab/augmed"

[tool.setuptools.packages.find]
include = ["augmed*"]

[tool.setuptools.package-data]
"augmed.data" = ["*.nii.gz", "*.npz"]
